--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
   http: ^1.2.1
+  dio: ^5.4.2+1
 
 dev_dependencies:
   flutter_test:
